# bilibili_NLP

./: .gitignore  B站评论分析系统-报告.docx  B站评论分析系统设计报告.docx  E-R图.excalidraw  README.md  pyproject.toml  render.html  requirements.txt  run_all.sh  start.sh  test_analysis.py  test_api.py  test_async_comment_fetch.py  test_comment_analysis.py  test_comment_fetch.py  test_curl.py  test_redis.py  test_simple_comment_fetch.py  test_stream_api.py  test_zhipu_client.py  参考文献列表.md  数据流程图.excalidraw  毕业设计报告.txt  毕业设计课题研究内容和预期成果.md  毕业设计课题研究内容和预期成果_Word格式.txt  用例图.excalidraw  界面设计图.excalidraw  类图.excalidraw  系统架构图.excalidraw
app/: main.py  run.py
app/api/: bilibili_api.py
app/database/: milvus_client.py  mysql_clinet.py  mysql_database.py  redis_client.py  redis_client_async.py  redis_pool.py  redis_report.py
app/schemas/: api.py  user.py
app/worker/: main_vector.py  (+1 more)
backend/: bert_test.py  bilibili.py  comment_analysis.py  database.py  kafka_consumer.py  kafka_producer.py  kafka_use.py  kafka_xiao.py  main.py  recommendation_model.py  redis_consumer.py  redis_report.py  requirements.txt  run_all.sh  run_backend.sh  run_worker_vector.sh  run_worker_video_comment.sh  sql_use.py  tempCodeRunnerFile.py  test.py  vector_db.py
frontend/: .env.development  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
tests/: test_agent.py  test_final.py  test_glm.py  test_model_params.py  test_one_chat.py  test_params.py  test_simple.py  test_stream.py  test_zhipu_client.py  test_zhipu_exact.py
worker/: main.py  redis_client.py
(+95 files in other folders)
